--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@100;700&display=swap");
 
+html {
+  font-size: 100%;
+}
 body {
   margin: 0;
   font-family: "Bai Jamjuree", sans-serif;
