--- a/src/pages/Landing/Navbar/styles.scss
+++ b/src/pages/Landing/Navbar/styles.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 80px;
+  z-index: 5;
 
   .navbar-text {
     transform: translateY(-100px);
@@ -12,5 +13,6 @@
     margin: 3rem;
     font-size: 1.5rem;
     cursor: pointer;
+    text-decoration: none;
   }
 }
