--- a/src/pages/Landing/styles.scss
+++ b/src/pages/Landing/styles.scss
@@ -20,19 +20,20 @@
   }
 
   .left-container {
-    margin-left: 10vw;
-    margin-top: 5rem;
-
-    width: 60vw;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 5rem;
+    justify-content: center;
     .text-container {
-      overflow: hidden;
       position: relative;
-      line-height: 12vw;
-
+      display: flex;
+      overflow: hidden;
+      text-overflow: ellipsis;
       .header-text {
         font-weight: 400;
         color: var(--textColor);
-        font-size: calc(4vw + 8rem);
+        font-size: calc(1vw + 7rem);
         transform: translateY(100%);
       }
     }
@@ -70,7 +71,7 @@
         color: white;
         opacity: 0;
         margin-bottom: 0.2rem;
-        font-size: 1vw;
+        font-size: calc(1vw + 1rem);
         transform: translateX(-40px);
       }
     }
