--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@100;700&display=swap");
 
 html {
+  scroll-behavior: smooth;
   font-size: 100%;
 }
 body {
